# endomorph

./: Cargo.toml
hem/: cabal.project  cabal.project.local  example.em  hem.cabal
hem/hem/: hem.cabal
hem/hem-lib/: hem-lib.cabal
hem/hem-lib/src/Endomorph/: Lexer.hs  Token.hs
hem/hem-lib/src/Endomorph/Lexer/: Comment.hs  Common.hs  Identifier.hs  Literal.hs  Operator.hs  Punctuator.hs  Util.hs
hem/hem-lib/test/: Main.hs
hem/hem-lib/test/Endomorph/: Spec.hs
hem/hem-lib/test/Endomorph/Lexer/: Spec.hs
hem/hem/src/: Main.hs
hem/src/: Main.hs  Token.hs
hem/src/Endomorph/: Lexer.hs  Token.hs
hem/src/Endomorph/Lexer/: Comment.hs  Common.hs  Identifier.hs  Literal.hs  Operator.hs  Punctuation.hs  Punctuator.hs  Util.hs
hem/src/Lexer/: Lexer.hs
rem/: Cargo.toml
rem/examples/: hello_world.em  old.em
rem/fuzz/: Cargo.toml
rem/src/: main.rs
rem/src/data/: mod.rs  source.rs  source_info.rs  token.rs
rem/src/diagnostics/problems/: mod.rs
rem/src/io/: io.rs
rem/src/lex/: data.rs  lex.rs  mod.rs  types.rs
rem/src/parser_combinators/: combinator.rs  mod.rs  parser.rs
rem/src/parser_combinators/tests/: combinator.rs  mod.rs  parser.rs
rem/src/types/: list.rs  mod.rs  source.rs  token.rs
rem/src/types/tests/: list.rs
rem/src/util/: mod.rs  source.rs
src/: main.rs
src/cli/: repl.rs
src/diagnostics/: mod.rs
src/diagnostics/problems/syntax_error/: mod.rs
src/parser_combinators/: combinator.rs  mod.rs  parser.rs
src/parser_combinators/tests/: combinator.rs  parser.rs
src/types/: list.rs  source.rs  token.rs
src/util/: text.rs
