cabal-version:      3.0
name:               hem
version:            0.1.0.0
synopsis:           Haskell Endomorph compiler.
description:        Compiler for the Endomorph programming language.
license:            MIT
author:             Sabine Lim
maintainer:         i@sab.gg
build-type:         Simple

common warnings
    ghc-options: -Wall

executable hem
    default-language: Haskell2010
    hs-source-dirs:   src
    main-is:          Main.hs
    other-modules:
        Endomorph.Lexer
        Endomorph.Lexer.Common
        Endomorph.Lexer.Identifier
        Endomorph.Lexer.Literal
        Endomorph.Lexer.Operator
        Endomorph.Lexer.Punctuation
        Endomorph.Lexer.Util
        Endomorph.Token
    import:
        warnings
    build-depends:
        base            >=4.17.2.0,
        haskeline       >=0.8.2.1,
        megaparsec      >=9.6.1,
        mtl             >=2.3.1,
        ormolu          >=0.7.3.0
