cabal-version:      3.0
name:               hem-lib
version:            0.1.0.0
synopsis:           Haskell Endomorph compiler.
description:        Compiler utilities for the Endomorph programming language.
license:            MIT
author:             Sabine Lim
maintainer:         i@sab.gg
build-type:         Simple

library
    default-language:   Haskell2010
    hs-source-dirs:     src
    ghc-options:        -Wall -Werror
    exposed-modules:
        Endomorph.Lexer
        Endomorph.Token
    other-modules:
        Endomorph.Lexer.Comment
        Endomorph.Lexer.Common
        Endomorph.Lexer.Identifier
        Endomorph.Lexer.Literal
        Endomorph.Lexer.Operator
        Endomorph.Lexer.Punctuator
        Endomorph.Lexer.Util
    build-depends:
        base            >=4.17.2.1,
        megaparsec      >=9.6.1

test-suite hem-lib-tests
    type:               exitcode-stdio-1.0
    default-language:   Haskell2010
    hs-source-dirs:     test
    main-is:            Main.hs
    ghc-options:        -Wall -Werror
    other-modules:
        Endomorph.Lexer.Spec
        Endomorph.Spec
    build-depends:
        base            >=4.17.2.1,
        hem-lib,
        hspec           >=2.11.7,
        QuickCheck      >=2.14.3
