cabal-version:      3.0
name:               hem
version:            0.1.0.0
synopsis:           Haskell Endomorph compiler.
description:        Compiler CLI executable for the Endomorph programming language.
license:            MIT
author:             Sabine Lim
maintainer:         i@sab.gg
build-type:         Simple

executable hem
    default-language:   Haskell2010
    hs-source-dirs:     src
    main-is:            Main.hs
    ghc-options:        -Wall -Werror
    build-depends:
        base            >=4.17.2.1,
        haskeline       >=0.8.2.1,
        hem-lib,
        mtl             >=2.3.1
